--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^11.18.2",
     "lenis": "^1.3.16",
     "lucide-react": "^0.561.0",
+    "nodemailer": "^7.0.11",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
