--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/forms": "0.5.7",
     "@tailwindcss/typography": "0.5.15",
     "@types/node": "20.14.12",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "18.3.12",
     "autoprefixer": "10.4.20",
     "eslint": "^9.39.2",
